--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -123,13 +123,14 @@
     <Compile Include="Actors\Auctions\Ask_Specs.cs" />
     <Compile Include="Actors\Auctions\Auction.cs" />
     <Compile Include="Actors\Auctions\Given_an_auction_actor_instance.cs" />
-    <Compile Include="Actors\Behaviors\MessageOnly_Specs.cs" />
+    <Compile Include="Actors\Behaviors\ExceptionHandler_Specs.cs" />
+    <Compile Include="Actors\Behaviors\MessageWithSender_Specs.cs" />
     <Compile Include="Actors\CleanUsing_Specs.cs" />
     <Compile Include="Actors\Fault_Specs.cs" />
     <Compile Include="Actors\InterceptExit_Specs.cs" />
     <Compile Include="Actors\Linking_Specs.cs" />
     <Compile Include="Actors\OrderedReceive_Specs.cs" />
-    <Compile Include="Actors\Redesign\BehaviorOnly_Specs.cs" />
+    <Compile Include="Actors\Behaviors\MessageOnly_Specs.cs" />
     <Compile Include="Actors\Redesign\Redesign_Specs.cs" />
     <Compile Include="Actors\Repeat_Specs.cs" />
     <Compile Include="AsyncIO\AsyncIO_Specs.cs" />
