Specializing the routing engine for messaging only

--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Actors\Behavior.cs" />
     <Compile Include="Actors\Configuration\Conventions\MessageWithSenderMethodBehaviorConvention.cs" />
     <Compile Include="Actors\Configuration\Internal\MessageWithSenderMethodApplicator.cs" />
+    <Compile Include="Actors\PendingHandle.cs" />
     <Compile Include="Actors\StactActor.cs" />
     <Compile Include="Actors\ActorRef.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
@@ -141,6 +142,7 @@
     <Compile Include="Actors\NextExceptionHandler.cs" />
     <Compile Include="Actors\NextExitHandler.cs" />
     <Compile Include="Actors\TimeoutHandle.cs" />
+    <Compile Include="Actors\UntypedActor.cs" />
     <Compile Include="ActorUrn.cs" />
     <Compile Include="Channels\UntypedFilterChannel.cs" />
     <Compile Include="Fibers\Executors\BasicOperationExecutor.cs" />
@@ -229,7 +231,7 @@
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
     <Compile Include="Actors\Internal\ActorFactoryImpl.cs" />
     <Compile Include="Fibers\OperationExecutor.cs" />
-    <Compile Include="Fibers\Internal\Agenda.cs" />
+    <Compile Include="Fibers\Internal\MessageRoutingEngineAgenda.cs" />
     <Compile Include="Fibers\Internal\StopFiberOnDispose.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderCallback.cs" />
     <Compile Include="MessageHeaders\MessageHeader.cs" />
@@ -272,17 +274,15 @@
     <Compile Include="Routing\Activation.cs" />
     <Compile Include="Routing\Configuration\ConsumerNodeFactory.cs" />
     <Compile Include="Routing\Configuration\DynamicConsumerNodeFactory.cs" />
-    <Compile Include="Routing\Configuration\DynamicRoutingEngineConfigurator.cs" />
+    <Compile Include="Routing\Configuration\MessageRoutingEngineConfigurator.cs" />
     <Compile Include="Routing\Configuration\MessageConsumerNodeFactory.cs" />
     <Compile Include="Routing\Configuration\ObjectConsumerNodeFactory.cs" />
-    <Compile Include="Routing\Contexts\DynamicRoutingContextFactory.cs" />
+    <Compile Include="Routing\RoutingEngineAgenda.cs" />
+    <Compile Include="Routing\RoutingEngineConfiguratorExtensions.cs" />
     <Compile Include="Routing\Contexts\MessageProxy.cs" />
-    <Compile Include="Routing\Contexts\MessageRoutingContextFactory.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContext.cs" />
     <Compile Include="Routing\Contexts\MessageRoutingContextProxy.cs" />
-    <Compile Include="Routing\Contexts\MessageRoutingContextProxyFactory.cs" />
-    <Compile Include="Routing\Contexts\ObjectRoutingContextFactory.cs" />
-    <Compile Include="Routing\Contexts\RoutingContextFactory.cs" />
+    <Compile Include="Routing\Contexts\RoutingContextProxyFactory.cs" />
     <Compile Include="Routing\Internal\MatchAlphaNode.cs" />
     <Compile Include="Routing\Internal\MatchJoinNode.cs" />
     <Compile Include="Routing\Nodes\ActiveContextList.cs" />
@@ -317,13 +317,13 @@
     <Compile Include="StactException.cs" />
     <Compile Include="MessageHeaders\Command.cs" />
     <Compile Include="Internal\ThreadSingleton.cs" />
-    <Compile Include="Actors\Internal\PendingReceiveImpl.cs" />
+    <Compile Include="Actors\Internal\PendingReceiveHandle.cs" />
     <Compile Include="Actors\WithinSentRequest.cs" />
     <Compile Include="Actors\Internal\WithinSentRequestImpl.cs" />
     <Compile Include="Actors\Internal\ThreadStaticActorFactory.cs" />
     <Compile Include="Messages\Exit.cs" />
     <Compile Include="Messages\Kill.cs" />
-    <Compile Include="Actors\PendingReceive.cs" />
+    <Compile Include="Actors\ReceiveHandle.cs" />
     <Compile Include="Channels\ChannelProviderFactory.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForDistributedChannels.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForPropertyChannel.cs" />
@@ -403,12 +403,10 @@
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
-    <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
     <Compile Include="Routing\Configuration\RoutingEngineConfigurator.cs" />
-    <Compile Include="Routing\ExtensionsToRoutingEngine.cs" />
-    <Compile Include="Routing\DynamicRoutingEngine.cs" />
+    <Compile Include="Routing\MessageRoutingEngine.cs" />
     <Compile Include="Routing\RoutingEngine.cs" />
     <Compile Include="Routing\Visualizers\AbstractRoutingEngineVisitor.cs" />
     <Compile Include="Routing\Visualizers\TraceRoutingEngineVisualizer.cs" />
