--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -108,29 +108,33 @@
       <Link>SolutionVersion.cs</Link>
     </Compile>
     <Compile Include="Actors\Actor.cs" />
-    <Compile Include="Actors\ActorChannel.cs" />
+    <Compile Include="Actors\ActorExceptionHandler.cs" />
+    <Compile Include="Actors\ActorInbox.cs" />
+    <Compile Include="Actors\ActorInternals.cs" />
     <Compile Include="Actors\ActorRefExtensions.cs" />
+    <Compile Include="Actors\Actors\ActorChannel.cs" />
+    <Compile Include="Actors\Actors\Behaviors\ActorBehavior.cs" />
+    <Compile Include="Actors\Actors\Behaviors\ActorBehaviorApplicator.cs" />
+    <Compile Include="Actors\Actors\Behaviors\ActorBehaviorFactory.cs" />
+    <Compile Include="Actors\Actors\Behaviors\ActorBehaviorFactoryImpl.cs" />
+    <Compile Include="Actors\Actors\Behaviors\BehaviorFactory.cs" />
+    <Compile Include="Actors\Actors\Behaviors\BehaviorFactoryImpl.cs" />
+    <Compile Include="Actors\Actors\Behaviors\BehaviorHandle.cs" />
+    <Compile Include="Actors\Actors\Behaviors\ActorBehaviorHandle.cs" />
+    <Compile Include="Actors\Actors\Behaviors\ActorBehaviorImpl.cs" />
+    <Compile Include="Actors\Actors\LocalActorReference.cs" />
     <Compile Include="Actors\Behavior.cs" />
+    <Compile Include="Actors\Behaviors\RestartOnExceptionBehavior.cs" />
     <Compile Include="Actors\Configuration\Conventions\MessageWithSenderMethodBehaviorConvention.cs" />
     <Compile Include="Actors\Configuration\Internal\MessageWithSenderMethodApplicator.cs" />
+    <Compile Include="Actors\ExceptionHandlerHandle.cs" />
+    <Compile Include="Actors\Internal\ActorExceptionHandlerHandle.cs" />
     <Compile Include="Actors\PendingHandle.cs" />
     <Compile Include="Actors\StactActor.cs" />
     <Compile Include="Actors\ActorRef.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
-    <Compile Include="Actors\ActorState.cs" />
-    <Compile Include="Actors\Actors\ActorExceptionHandler.cs" />
     <Compile Include="Actors\Actors\Registries\ActorRegistryChannel.cs" />
-    <Compile Include="Actors\Actors\SelfOnlyActorRestartExceptionHandler.cs" />
     <Compile Include="Actors\Actors\SupervisorActor.cs" />
-    <Compile Include="Actors\Behaviors\ActorBehaviorApplicator.cs" />
-    <Compile Include="Actors\Behaviors\ActorBehaviorFactory.cs" />
-    <Compile Include="Actors\Behaviors\ActorBehaviorFactoryImpl.cs" />
-    <Compile Include="Actors\Behaviors\ActorBehavior.cs" />
-    <Compile Include="Actors\Behaviors\BehaviorImpl.cs" />
-    <Compile Include="Actors\Behaviors\BehaviorFactory.cs" />
-    <Compile Include="Actors\Behaviors\BehaviorFactoryImpl.cs" />
-    <Compile Include="Actors\Behaviors\BehaviorHandle.cs" />
-    <Compile Include="Actors\Behaviors\BehaviorHandleImpl.cs" />
     <Compile Include="Actors\Configuration\BehaviorConvention.cs" />
     <Compile Include="Actors\Configuration\Conventions\ExceptionHandlerMethodBehaviorConvention.cs" />
     <Compile Include="Actors\Configuration\Conventions\MessageOnlyMethodBehaviorConvention.cs" />
@@ -139,7 +143,6 @@
     <Compile Include="Actors\ExtensionsForLinking.cs" />
     <Compile Include="Actors\Internal\ActorSourceChannelProxy.cs" />
     <Compile Include="Actors\Internal\UntypedChannelActorRef.cs" />
-    <Compile Include="Actors\LocalActorReference.cs" />
     <Compile Include="Actors\NextExceptionHandler.cs" />
     <Compile Include="Actors\NextExitHandler.cs" />
     <Compile Include="Actors\TimeoutHandle.cs" />
@@ -178,7 +181,6 @@
     <Compile Include="Actors\Configuration\ActorRegistryConfigurator.cs" />
     <Compile Include="Actors\Configuration\RegistryConfigurators\ActorRegistryConfiguratorImpl.cs" />
     <Compile Include="Actors\Configuration\Internal\ActorFactoryConfiguratorImpl.cs" />
-    <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
     <Compile Include="Actors\Configuration\RegistryConfigurators\InMemoryRegistryBuilder.cs" />
@@ -297,15 +299,14 @@
     <Compile Include="Routing\Visualizers\GraphRoutingEngineVisitor.cs" />
     <Compile Include="Routing\Visualizers\RoutingEngineGraphData.cs" />
     <Compile Include="Routing\Visualizers\StringRoutingEngineVisitor.cs" />
-    <Compile Include="Schedulers\Internal\StopSchedulerOnDispose.cs" />
+    <Compile Include="Schedulers\Schedulers\StopSchedulerOnDispose.cs" />
     <Compile Include="Schedulers\SchedulerException.cs" />
     <Compile Include="Schedulers\TimerScheduler.cs" />
     <Compile Include="ActorSendExtensions.cs" />
     <Compile Include="SentRequestExtensions.cs" />
     <Compile Include="StactException.cs" />
-    <Compile Include="MessageHeaders\Command.cs" />
     <Compile Include="Internal\ThreadSingleton.cs" />
-    <Compile Include="Actors\Internal\PendingReceiveHandle.cs" />
+    <Compile Include="Actors\Internal\ActorReceiveHandle.cs" />
     <Compile Include="Actors\WithinSentRequest.cs" />
     <Compile Include="Actors\Internal\WithinSentRequestImpl.cs" />
     <Compile Include="Actors\Internal\ThreadStaticActorFactory.cs" />
@@ -412,9 +413,9 @@
     <Compile Include="Fibers\FiberProvider.cs" />
     <Compile Include="Schedulers\Scheduler.cs" />
     <Compile Include="Schedulers\ScheduledOperation.cs" />
-    <Compile Include="Schedulers\Internal\ScheduledOperationExecuter.cs" />
-    <Compile Include="Schedulers\Internal\ScheduledOperationList.cs" />
-    <Compile Include="Schedulers\Internal\ScheduledOperationExecuterImpl.cs" />
+    <Compile Include="Schedulers\Schedulers\ScheduledOperationExecuter.cs" />
+    <Compile Include="Schedulers\Schedulers\ScheduledOperationList.cs" />
+    <Compile Include="Schedulers\Schedulers\ScheduledOperationExecuterImpl.cs" />
     <Compile Include="Schedulers\SchedulerFactory.cs" />
     <Compile Include="Fibers\SynchronousFiber.cs" />
     <Compile Include="Fibers\Internal\SingleFiberProvider.cs" />
