--- a/Stact.nuspec
+++ b/Stact.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Stact</id>
-    <version>1.0.0.3</version>
+    <version>2.0.0-prerelease</version>
     <authors>Chris Patterson</authors>
     <description>Stact is an actor library and framework</description>
     <language>en-US</language>
@@ -14,7 +14,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="build_output\net-3.5\Stact.*" target="lib\NET35" />
     <file src="build_output\net-4.0\Stact.*" target="lib\NET40" />
   </files>
 </package>
