--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -85,6 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actors\ActorExceptionHandlerExtensions.cs" />
     <Compile Include="Channels\Internal\ChannelVisitor.cs" />
     <Compile Include="Channels\Internal\DynamicImplementationBuilder.cs" />
     <Compile Include="Channels\Internal\DynamicProxyFactory.cs" />
@@ -144,7 +145,6 @@
     <Compile Include="Actors\Configuration\Conventions\MessageOnlyMethodBehaviorConvention.cs" />
     <Compile Include="Actors\Actors\Behaviors\BehaviorContext.cs" />
     <Compile Include="Actors\Actors\Behaviors\ExceptionHandlerMethodApplicator.cs" />
-    <Compile Include="Actors\ExtensionsForLinking.cs" />
     <Compile Include="Actors\Internal\ActorSourceChannelProxy.cs" />
     <Compile Include="Actors\Internal\UntypedChannelActorRef.cs" />
     <Compile Include="Actors\NextExceptionHandler.cs" />
@@ -334,8 +334,6 @@
     <Compile Include="Channels\FutureChannel.cs" />
     <Compile Include="Channels\InstanceChannelProvider.cs" />
     <Compile Include="Channels\SelectiveConsumerChannel.cs" />
-    <None Include="Channels\Visitors\ExtensionsForVisualizers.cs" />
-    <None Include="Channels\Visitors\GraphChannelVisitor.cs" />
     <Compile Include="Channels\Internal\ConnectChannelVisitor.cs" />
     <Compile Include="Channels\Configuration\Internal\InstanceConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\IntervalConfiguratorImpl.cs" />
@@ -344,13 +342,13 @@
     <Compile Include="Channels\Configuration\Internal\UntypedConnectionConfigurator.cs" />
     <Compile Include="Channels\Internal\UntypedChannelConnection.cs" />
     <Compile Include="Channels\Configuration\Builders\ChannelBuilderConfigurator.cs" />
-    <None Include="Channels\Visitors\FlattenChannelVisitor.cs" />
+    <Compile Include="Channels\Visitors\FlattenChannelVisitor.cs" />
     <Compile Include="Channels\MessageEnvelope.cs" />
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
-    <None Include="Channels\Visitors\TraceChannelVisitor.cs" />
+    <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
     <Compile Include="Routing\RoutingEngineConfigurator.cs" />
     <Compile Include="Routing\MessageRoutingEngine.cs" />
     <Compile Include="Routing\RoutingEngine.cs" />
@@ -379,7 +377,6 @@
     <Compile Include="Fibers\FiberFactory.cs" />
     <Compile Include="Channels\AsyncResultChannel.cs" />
     <Compile Include="Channels\ChannelAccessor.cs" />
-    <None Include="Channels\Visitors\ChannelVisitor.cs" />
     <Compile Include="Channels\ConsumerChannel.cs" />
     <Compile Include="Channels\Channel.cs" />
     <Compile Include="Channels\Consumer.cs" />
