--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -86,6 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\ActorExceptionHandlerExtensions.cs" />
+    <Compile Include="Actors\ListMessageQueue.cs" />
+    <Compile Include="Actors\MessageQueue.cs" />
+    <Compile Include="Actors\MessageQueueExecutor.cs" />
     <Compile Include="Channels\Internal\ChannelVisitor.cs" />
     <Compile Include="Channels\Internal\DynamicImplementationBuilder.cs" />
     <Compile Include="Channels\Internal\DynamicProxyFactory.cs" />
@@ -99,6 +102,13 @@
     <Compile Include="Configuration\Configurators\ValidateConfigurationResultImpl.cs" />
     <Compile Include="Configuration\Configurators\ValidationConfigurationResultDisposition.cs" />
     <Compile Include="Configuration\ValidationConfigurationResultExtensions.cs" />
+    <Compile Include="Fibers\ActionListExecutor.cs" />
+    <Compile Include="Fibers\AsyncTaskExecutor.cs" />
+    <Compile Include="Fibers\Executor.cs" />
+    <Compile Include="Fibers\ExecuteFiberExtensions.cs" />
+    <Compile Include="Fibers\NotifyActionsNotExecuted.cs" />
+    <Compile Include="Fibers\TaskExecutor.cs" />
+    <Compile Include="Fibers\TaskFiber.cs" />
     <Compile Include="Internals\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -158,6 +168,7 @@
     <Compile Include="Internal\LinkImpl.cs" />
     <Compile Include="Internal\ReSharperStaticAnalysis.cs" />
     <Compile Include="LoopExtensions.cs" />
+    <Compile Include="MessageHeaders\MessageDispatcher.cs" />
     <Compile Include="MessageHeaders\MessageHeaderExtensions.cs" />
     <Compile Include="MessageHeaders\SetMessageHeader.cs" />
     <Compile Include="Messages\ActorRestartLimitReached.cs" />
